eks-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liquibase
  labels:
    name: liquibase
