eks-postgres-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  namespace: liquibase
  labels:
    app: postgres
spec:
  containers:
  - name: postgres-container
    image: postgres:15
    ports:
    - containerPort: 5432
    volumeMounts:
    - name: postgres-data
      mountPath: /var/lib/postgresql/data
  volumes:
  - name: postgres-data
    emptyDir: {}
