eks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liquibase-service
  namespace: liquibase
  labels:
    app: liquibase
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: liquibase
