eks-liquibase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-liquibase
  namespace: liquibase
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: liquibase.sandbox.paylease.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: liquibase-service
            port: 
              number: 443
