eks-postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-postgres
  namespace: liquibase
  annotations:
    # use the shared ingress-nginx
    nginx.ingress.kubernetes.io/backend-protocol: "TCP"
spec:
  rules:
  - host: postgres.sandbox.paylease.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres-service
            port: 
              number: 5432
